--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+:root {
+  --font-family: 'Inter', sans-serif;
 }
 
 html {
@@ -46,10 +11,12 @@ html {
 body {
   height: 100%;
   margin: 0;
-
   font-size: 1.125rem;
+  font-family: var(--font-family);
+}
 
-  font-family: "Inter", sans-serif;
+input {
+  font-family: var(--font-family);
 }
 
 #root {
