--- a/src/styles/RecipeFinder.css
+++ b/src/styles/RecipeFinder.css
@@ -18,11 +18,7 @@
   background-color: rgb(86, 155, 59);
   color: white;
   border: 0.1rem solid rgb(214, 209, 209);
-  padding: 0.4rem;
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
-
-  font-family: "Inter", sans-serif;
+  padding: 0.4rem 0.7rem;
 }
 
 .find-recipe-btn:disabled {
@@ -41,9 +37,7 @@
 
 .container {
   min-height: 80%;
-  padding-top: 6rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 6rem 1rem 1rem 0rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
